@@ -176,6 +176,7 @@ module Int :
 
 
     (** {7 Printing}*)
+
     val print: 'a InnerIO.output -> t -> unit
     val t_printer : t Value_printer.t
   end
